// Copyright 2023 Google LLC
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

import groovy.json.JsonSlurper

buildscript {
    ext.kotlin_version = '2.1.21'
    repositories {
        google()
        mavenCentral()
    }

    dependencies {
        classpath("com.android.tools.build:gradle:8.6.1")
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}

def isNewArchitectureEnabled() {
  return rootProject.hasProperty("newArchEnabled") && rootProject.getProperty("newArchEnabled") == "true"
}

apply plugin: 'com.android.library'

if (isNewArchitectureEnabled()) {
  apply plugin: "com.facebook.react"
}

android {
    namespace "com.google.android.react.driversdk"
    
    compileSdkVersion 36

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    defaultConfig {
        minSdkVersion 26
        targetSdkVersion 36
        versionCode 1
        // get version name from package.json version
        versionName "1.0"
    }

    buildTypes {
        release {
        minifyEnabled false
        }
    }

    lintOptions {
        abortOnError false
        disable "GradleCompatible"
    }
}

allprojects {
  // Required: you must exclude the Google Play service Maps SDK from
  // your transitive dependencies. This is to ensure there won't be
  // multiple copies of Google Maps SDK in your binary, as the Navigation
  // SDK already bundles the Google Maps SDK.
  configurations {
    implementation {
      exclude group: 'com.google.android.gms', module: 'play-services-maps'
    }
  }
}

repositories {
  google()
  mavenCentral()
}

dependencies {
  implementation 'com.google.android.libraries.mapsplatform.transportation:transportation-driver:7.0.0'
  implementation 'com.facebook.react:react-native:+'
  implementation 'com.android.support:multidex:1.0.3'
  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
  api 'com.google.guava:guava:31.0.1-android'

  testImplementation 'junit:junit:4.13.2'
  testImplementation "com.google.truth:truth:1.1.2"
  testImplementation "org.mockito:mockito-core:3.6.0"
  testImplementation "org.mockito:mockito-inline:3.6.0"
  implementation project(':googlemaps_react-native-navigation-sdk')
}
